--- a/react_ws_src/package.json
+++ b/react_ws_src/package.json
@@ -21,7 +21,9 @@
     "bu": "npm run build && npm run build:copyupd_win",
     "bv": "npm version patch",
     "build:copyall_win": "xcopy dist\\* ..\\WS\\public /E /Y /D && xcopy static\\* ..\\WS\\public /E /Y /D",
-    "build:copyupd_win": "copy dist\\bundle.js ..\\WS\\public\\ && copy dist\\style.css ..\\WS\\public\\"
+    "build:copyupd_win": "copy dist\\bundle.js ..\\WS\\public\\ && copy dist\\style.css ..\\WS\\public\\",
+    "build:copyall_mac": "cp -R dist/* ../WS/public/ && cp -R static/* ../WS/public/",
+    "build:copyupd_mac": "cp dist/bundle.js ../WS/public/ && cp dist/style.css ../WS/public/"
   },
   "dependencies": {
     "ampersand-app": "^2.0.0",
