--- a/react_ws_src/package.json
+++ b/react_ws_src/package.json
@@ -36,7 +36,10 @@
     "react-ga": "^2.1.1",
     "react-imageloader": "^2.1.0",
     "react-motion": "^0.4.4",
+    "react-redux": "^5.1.2",
     "react-router": "^2.5.2",
+    "redux": "^4.0.5",
+    "sass": "^1.85.1",
     "socket.io": "^1.4.8",
     "superagent": "^2.0.0",
     "validator": "^5.4.0",
@@ -46,7 +49,7 @@
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-jest": "^13.2.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
@@ -56,7 +59,7 @@
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.0",
+    "express": "^4.21.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
